--- a/src/components/Banner/styles.scss
+++ b/src/components/Banner/styles.scss
@@ -1,5 +1,9 @@
 .banner {
-  height: 100%;
+  height: 80vh;
+  background-image: url("../../images/dog.png");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: right;
 }
 
 .dog-container {
